fixed some color contrast problems purely for testing purposes

--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@ p {
 }
 
 span {
-  color: rgb(128, 26, 0);
+  color: #0e0706;
   margin: 0 5px;
   font-size: 1.2rem;
   font-family: 'Kumbh Sans', sans-serif;
